# tauri-plugin-lnxdxtf-thermal-printer

./: .gitignore  Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: main.rs
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
src/connections/: connections.rs  mod.rs
usb_driver/: POS.....inf
usb_driver/windows/: POS.....cat
webview-dist/: index.js
webview-src/: index.ts
