[package]
name = "tauri-plugin-lnxdxtf-thermal-printer"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.65"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-lnxdxtf-thermal-printer"

[dependencies]
tauri = { version = "2.0.0-alpha.10" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.6" }
